--- a/tutorials/WritingPlist/WritingPlist/Base.lproj/Main.storyboard
+++ b/tutorials/WritingPlist/WritingPlist/Base.lproj/Main.storyboard
@@ -65,11 +65,18 @@
                                 <rect key="frame" x="542" y="110" width="30" height="30"/>
                                 <animations/>
                                 <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="addNote:" destination="OEM-Hf-Ye3" eventType="touchUpInside" id="1Of-D4-XCX"/>
+                                </connections>
                             </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="addNote" destination="w5O-Qn-3h4" id="1bM-oF-TNw"/>
+                        <outlet property="note" destination="nAY-tq-ggA" id="QVg-Fa-lEO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xN0-eF-hDc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
