--- a/tutorials/WritingPlist/WritingPlist/Base.lproj/Main.storyboard
+++ b/tutorials/WritingPlist/WritingPlist/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="S3g-pz-BAp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="S3g-pz-BAp">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Root View Controller-->
@@ -20,7 +21,20 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LOR-Vf-M74" id="QAS-bz-TSm">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YhG-E4-ZpO">
+                                            <rect key="frame" x="547" y="7" width="45" height="30"/>
+                                            <state key="normal" title="Delete"/>
+                                            <connections>
+                                                <action selector="removeItem:" destination="k1r-J4-zcF" eventType="touchUpInside" id="wQz-j6-px3"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
                                     <animations/>
+                                    <constraints>
+                                        <constraint firstItem="YhG-E4-ZpO" firstAttribute="centerY" secondItem="QAS-bz-TSm" secondAttribute="centerY" id="hpY-8Y-G9E"/>
+                                        <constraint firstItem="YhG-E4-ZpO" firstAttribute="trailing" secondItem="QAS-bz-TSm" secondAttribute="trailingMargin" id="nC1-XO-7j4"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <animations/>
                             </tableViewCell>
@@ -30,14 +44,15 @@
                             <outlet property="delegate" destination="k1r-J4-zcF" id="RbT-LD-8yW"/>
                         </connections>
                     </tableView>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Root View Controller" id="ohT-Xt-KQl">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="IDc-Tw-DW6">
                             <connections>
-                                <action selector="addNewNote:" destination="k1r-J4-zcF" id="nf0-sJ-uo1"/>
-                                <segue destination="uUT-WQ-hrh" kind="presentation" id="wCs-zl-4oa"/>
+                                <action selector="openAlertWindow:" destination="k1r-J4-zcF" id="zi0-rb-L8X"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dgp-kM-6ex" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -52,11 +67,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="2bw-EH-u4e">
+                            <rect key="frame" x="0.0" y="97" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Add Note"/>
+                            <connections>
+                                <action selector="addNote:" destination="y24-4r-Mlt" eventType="touchUpInside" id="qGU-Ga-Yl0"/>
+                            </connections>
+                        </button>
                         <sections>
                             <tableViewSection footerTitle="" id="GEA-uU-BZa">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="W4i-z6-QGv">
-                                        <rect key="frame" x="0.0" y="99" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="35" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="W4i-z6-QGv" id="YHT-Ag-uxt">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -115,25 +138,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P4k-96-oR9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="242" y="-454"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Yo0-kG-qsI">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uUT-WQ-hrh" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5af-MO-QAq">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="y24-4r-Mlt" kind="relationship" relationship="rootViewController" id="jGt-MS-muR"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hpi-y4-XQe" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1759" y="-454"/>
         </scene>
     </scenes>
 </document>
